# OpenFPL-Scout-AI

./: .dockerignore  .gitignore  Dockerfile  Docs.md  LICENSE  README.md  STATIC_FILES_CONFIG.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/internal/scout_team/: gw_1.json
models/: catboost_reg.pkl  linear_regression_reg.pkl  reg_0.pkl  reg_1.pkl  reg_2.pkl  xgboost_reg.pkl
src/: __init__.py  auth.py  logger.py  models.py  scout.py  utils.py
static/: docs.html  index.html  redoc.html  script.js  style.css
