[project]
name = "OpenFPL-Scout-AI"
version = "4.3.0"
description = "An AI-powered Fantasy Premier League Scout that uses ensemble machine learning (Linear Regression, XGBoost, CatBoost) to predict player points and optimize FPL team selection. It features a beautiful web interface for visualizing your optimal team in a football pitch layout."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.25.2",
    "joblib>=1.3.1",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "uvicorn>=0.22.0",
    "fastapi>=0.103.1",
    "python-multipart>=0.0.6",
    "pydantic>=2.6.2",
    "aiofiles>=23.1.0",
]

[dependency-groups]
train = [
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.6",
    "catboost>=1.2",
]